# PTM_macro_indicators_tool

./: .env.example  .gitattributes  .gitignore  AGENTS.md  PROJECT_SPEC.md  README.md  SOURCE_PROVENANCE.md  pyproject.toml  source_registry.yaml
data/official/: building_permits.csv  commodity_copper.csv  commodity_gold.csv  commodity_iron_ore.csv  commodity_lumber.csv  commodity_silver.csv  commodity_wti.csv  credit_spreads_hy.csv  credit_spreads_ig.csv  ism_manufacturing.csv  ism_services.csv  m2.csv  real_rates.csv  umcsi.csv  yield_curve.csv
macro_radar/: __init__.py  config.py
macro_radar/commands/: __init__.py  refresh_fred_snapshots.py
macro_radar/indicators/: __init__.py  base.py  building_permits.py  commodities.py  credit_spreads.py  ism.py  m2.py  rates.py  stubs.py  umcsi.py
macro_radar/ingestion/: csv_loader.py  fred.py
macro_radar/scoring/: __init__.py  macro_bias.py
macro_radar/storage/: duckdb_store.py
macro_radar/transforms/: __init__.py  statistics.py  time_series.py
macro_radar/ui/: app.py
tests/: test_csv_loader.py  test_fred_adapter.py  test_indicators.py  test_macro_bias.py  test_refresh_fred_snapshots.py  test_source_registry.py  test_storage.py  test_transforms.py  test_ui_app.py
tests/fixtures/: fred_observations_m2.json
